--- a/Forge.Web/Styles/Components/_buttons.scss
+++ b/Forge.Web/Styles/Components/_buttons.scss
@@ -27,6 +27,8 @@ button,
     font-size: 14px;
     line-height: 14px;
     border-radius: 3px;
+    font-family: inherit;
+    min-height: 30px;
 
     &:hover{ background-color: $color-secondary-50; }
 
@@ -56,7 +58,7 @@ button,
         //border: 2px solid $color-primary-80;
         color: $color-primary-80;
         background-color: transparent;
-        &:hover{ color: $color-primary-90; border-color: $color-primary-90; }
+        &:hover{ color: $color-primary-90; } //border-color: $color-primary-90; }
     }
 
     &:disabled,
