--- a/Forge.Web/Styles/_mixins.scss
+++ b/Forge.Web/Styles/_mixins.scss
@@ -1,4 +1,6 @@
-﻿// LINEAR GRADIENTS
+﻿@import 'colors';
+
+// LINEAR GRADIENTS
 // ====================================
 // Two-color gradient
 @mixin linear-gradient-vertical-2($top-color, $top-start, $bottom-color, $bottom-start) {
@@ -82,7 +84,71 @@
 }
 
 @mixin soft-shadow() {
-    -webkit-box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
-    -moz-box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+    -webkit-box-shadow: 1px 1px 7px 0 rgba(0,0,0,0.2);
+    -moz-box-shadow: 1px 1px 7px 0 rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 7px 0 rgba(0,0,0,0.2);
+}
+
+@mixin bg-dots($bg: $color-primary-60){
+    background:
+        radial-gradient(rgba(black, 0.4) 15%, transparent 16%) 0 0,
+        radial-gradient(rgba(black, 0.4) 15%, transparent 16%) 4px 4px;
+        /*radial-gradient(rgba(white, .1) 15%, transparent 20%) 0 1px,
+        radial-gradient(rgba(white, .1) 15%, transparent 20%) 4px 5px;*/
+    background-color:$bg;
+    background-size:8px 8px;
+}
+
+@mixin gradient-animate($color1: $color-secondary-70, $color2: $color-secondary-80){
+    background: linear-gradient(45deg, $color1, $color2);
+    background-size: 400% 400%;
+
+    -webkit-animation: bganimate 3s ease infinite;
+    -moz-animation: bganimate 3s ease infinite;
+    animation: bganimate 3s ease infinite;
+
+    @-webkit-keyframes bganimate {
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }
+    @-moz-keyframes bganimate {
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }
+    @keyframes bganimate { 
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }
+}
+
+@mixin gradient-animate-pattern($color1: $color-secondary-70, $color2: $color-secondary-90){
+    background-color: $color1;
+    background-image:
+        repeating-linear-gradient(45deg, transparent, transparent 15px, rgba($color2, .2) 15px, rgba($color2, .2) 30px),
+        linear-gradient(90deg, $color-secondary-80, $color-secondary-40, $color-secondary-80);
+
+    background-size: 200% 200%;
+
+    -webkit-animation: bganimate 20s linear infinite;
+    -moz-animation: bganimate 20s linear infinite;
+    animation: bganimate 20s linear infinite;
+
+    @-webkit-keyframes bganimate {
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }
+    @-moz-keyframes bganimate {
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }
+    @keyframes bganimate { 
+        0%{background-position:0% 51%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 51%}
+    }
 }
