--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -15,9 +15,6 @@ html {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    min-height: 100%;
-    height: 100%;
-
     font-family: 'Work Sans', sans-serif;
     color: $color-primary-80;
     overflow-x: hidden;
@@ -25,10 +22,20 @@ html {
     body {
         position: relative;
         padding-top: $size-nav-height;
-        min-height: 100%;
-        height: 100%;
         background-color: $color-primary-40;
         overflow-x: hidden;
+    }
+}
+
+// Sticky Footer
+html, body { height: 100%; }
+#content{
+    min-height: 100%; 
+    margin-bottom: -$size-footer-height;
+    &:after{
+        display: block;
+        content: "";
+        height: $size-footer-height;
     }
 }
 
@@ -36,7 +43,6 @@ a {
     padding: 5px 10px;
     display: inline-block;
     text-decoration: none;
-    font-weight: 600;
     font-size: 14px;
     cursor: pointer;
     color: $color-secondary-50;
@@ -54,6 +60,25 @@ a {
 
 b { font-weight: 600; }
 
+::-webkit-scrollbar-track
+{
+	//border-radius: 10px;
+	background-color: $color-primary-50;
+    margin-left: 5px;
+}
+
+::-webkit-scrollbar
+{
+	width: 12px;
+}
+
+::-webkit-scrollbar-thumb
+{
+	//border-radius: 10px;
+	background-color: $color-primary-80;
+}
+
+
 @import 'Components/icons';
 @import 'Components/nav';
 @import 'Components/footer';
@@ -69,3 +94,8 @@ b { font-weight: 600; }
 @import 'Components/expandables';
 @import 'Components/spec-runner';
 @import 'Components/overlay';
+@import 'Components/dialogs';
+@import 'Components/tooltips';
+
+// Controls
+@import 'Components/pushList';
