--- a/Forge.Web/Styles/Components/_pushList.scss
+++ b/Forge.Web/Styles/Components/_pushList.scss
@@ -16,6 +16,8 @@
     
 
     .dictionary__list{
+        min-width: 400px; 
+
         li {
             display: flex;
             margin-bottom: 10px;
