--- a/Forge.Web/Views/Shared/_Layout.cshtml
+++ b/Forge.Web/Views/Shared/_Layout.cshtml
@@ -47,6 +47,11 @@
             React.createElement(Footer),
             document.getElementById('footer')
         );
+
+        //if ('serviceWorker' in navigator){
+        //    navigator.serviceWorker
+        //        .register('../serviceworker.js')
+        //}
     </script>
 </body>
 </html>
