--- a/Forge.Web/Styles/Components/_designer.scss
+++ b/Forge.Web/Styles/Components/_designer.scss
@@ -28,6 +28,8 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     h3 { padding: 0 0 10px 20px; }
 }
 
+.designer__overlay { display: none; z-index: 9; }
+
 // __List
 // ---------------------------
 .designer__list{
@@ -47,9 +49,12 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
     @include translateX(0);    
     @include transition(transform, 0.3s);
+    @include soft-shadow();
 
     @media screen and (max-width: 720px){
         position: absolute;
+        
+        & ~ .designer__overlay { display: block; }
     }
     
     h3 { border-top-left-radius: 3px; }
@@ -66,6 +71,8 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
         @media screen and (max-width: 720px){
             @include translateX(-156px);
 
+             & ~ .designer__overlay { display: none; }
+
             // Mini buttons to become stacked
             // vertically on visible sidebar.
             .designer__mini-buttons{
@@ -78,6 +85,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
                     padding: 20px 10px;
                     border: none !important;
                     color: $color-primary-70 !important;
+                    
                     &:hover { color: $color-primary-80 !important; }
                 }
             }
@@ -111,13 +119,13 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
             button{
                 flex-grow: 1;
                 text-align: center;
+                min-width: 0;
                 width: 44px;
                 background: transparent;
-                transition: flex-grow 0.3s ease-in-out;
                 border-bottom: 2px solid $color-primary-60;
                 border-radius: 3px 3px 0 0;
                 margin-bottom: -2px;
-                color: $color-primary-70;
+                color: $color-primary-70;              
 
 
                 &:after { float: none; text-shadow: none; }
@@ -209,6 +217,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
             width: 100%;
             text-align: left;
             height: 40px;
+            padding: 10px;
             border-radius: 0;
             border: none;
             white-space: nowrap;
@@ -216,7 +225,15 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
             text-overflow: ellipsis;
         }
 
-        .setting--active{ opacity: 0.6; }
+        &.setting--active{ 
+            //opacity: 0.9;
+
+            .setting__icon:after{
+                font-family: FontAwesome;
+                content: "\f058";
+                margin-right: 5px; 
+            }
+        }
 
         &.designer__list-item--unsaved{
             border-color: $color-action-30 !important;
@@ -246,7 +263,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
         }
 
         // Add
-        &:first-child{ border: none; }
+        &:first-child:not(.setting){ border: none; }
     }
 }
 
@@ -271,9 +288,38 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 // ---------------------------
 .designer__tiles{
     display: flex;
+    justify-content: center;
+    flex-wrap:wrap;
+
     .designer__tile{
-        height: 100px;
-        width: 100px;
+        text-align: center;
+        padding: 10px;
+        margin: 10px;
+        line-height: 1;
+        width: 150px;
+
+        &.designer__tile--access{
+            .designer__tile-title:after{
+                font-family: FontAwesome;
+                content: "\f13e";
+            }            
+        }
+
+        &.designer__tile--Locked{
+            .designer__tile-title:after{
+            content: "\f023";
+            }
+        }
+
+        .designer__tile-title{
+            padding: 0;
+            padding-bottom: 10px;
+            font-size: 42px;
+            text-shadow: 2px 2px rgba(black, 0.2);
+            font-weight: bold;
+        }
+
+        &+.designer__tile{ margin-left: 10px; }
     }
 }
 
