--- a/Forge.Web/Styles/Components/_designer__stage.scss
+++ b/Forge.Web/Styles/Components/_designer__stage.scss
@@ -25,18 +25,47 @@
     }
 
     .designer__recent{
-        border-top: 1px solid $color-primary-40;
-        margin-top: 10px;
-        padding-top: 10px;
-        a{
-            display: block;
+        text-align: left;
+
+        .recent__columns{
+            display: flex;
+            justify-content: center;
+            ul+ul{ margin-left: 50px; }
+
+            button { text-align: left;}
+
+            @media screen and (max-width: 600px){
+                flex-direction: column;
+                ul+ul{ margin: 30px 0 0 0; }
+            }
         }
+
+        .recent__header{
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        
+    }
+}
+
+.designer__link{
+    display: block;
+
+    
+    span:nth-child(2){
+        font-size: 12px;
+        color: $color-primary-80;
+        margin-left: 10px;
     }
 }
 
 .stage__workspace{
     padding:20px;
     min-height: calc(100% - 91px);
+    max-width: 900px;
+
+    &>*:first-child{ margin-top: 0!important; }
 
     .group__definitions{
         display: flex;
@@ -54,8 +83,12 @@
             font-size: 14px;
             padding-right: 30px;
         }
-        .field__label {
-             min-width: 120px;
+
+        .field__label {  min-width: 120px; }
+
+        &>.field {
+            .field__label,
+            .field__value { padding-left: 30px;}
         }
 
         .definition__setting-remove {
@@ -133,9 +166,10 @@
 .stage__menu{
     background-color: $color-background-menu-2;
     border-bottom: 1px solid $color-primary-60;
+    @include soft-shadow();
     .button{
         line-height: 1.2;
-        padding: 10px 15px;
+        padding: 10px 20px;
         &:before{ 
             display: block;
             font-family: FontAwesome;
