--- a/Forge.Web/Styles/Components/_dialogs.scss
+++ b/Forge.Web/Styles/Components/_dialogs.scss
@@ -19,8 +19,9 @@
         top: 100px;
         left: 50%;
         transform: translateX(-50%);
-        border: 1px solid white;
         background: $color-primary-10;
+        border:1px solid $color-primary-60;
+        z-index: 100;
         @include soft-shadow();
     }
 
