--- a/Forge.Web/Styles/Components/_expandables.scss
+++ b/Forge.Web/Styles/Components/_expandables.scss
@@ -9,7 +9,7 @@
     }
 
     .expandable__label{
-        padding-left: 20px;
+        padding-left: 30px;
     }
     .expandable__button,
     .expandable__label {
@@ -18,6 +18,8 @@
 
         .expandable__icon {
             font-family: FontAwesome;
+            min-width: 0;
+            padding: 10px;
 
             &:after {
                 display: inline-block;
