--- a/Forge.Web/Styles/Components/_fields.scss
+++ b/Forge.Web/Styles/Components/_fields.scss
@@ -7,11 +7,12 @@
 .field{
     width: 100%;
     margin: 20px 0;
+    
 
     .field__label{
         display: block;
         margin: 3px 0;
-        font-weight: 600;
+        font-weight: bold;
         vertical-align: middle;
         word-break: break-word;
         font-size: 14px;
@@ -21,9 +22,8 @@
         display: inline-block;
         width: 100%;
         vertical-align: middle;
+        min-height: 30px;
     }
-
-    span.field__value{ padding-left: 5px; }
 
     input, select { 
         width: 100%;
@@ -65,19 +65,14 @@ input {
         width: 100%;
 
         .field__label { 
-            padding: 10px; 
-            //text-align: right;
             min-width: 100px;
-        }
-
-        .field__value{
-            padding-left: 10px;
         }
 
         .field__label,
         .field__value{
             display: table-cell;
             margin: 0;
+            padding: 5px 0;
         }
     }
 
