--- a/Forge.Web/Styles/Components/_headings.scss
+++ b/Forge.Web/Styles/Components/_headings.scss
@@ -17,9 +17,10 @@ h3 {
 }
 
 h4 { 
-    font-weight: bold;
     margin: 0 0 20px 0;
-    &+.summary { margin-top: -15px; }
+    &+.summary {
+        margin-top: -15px;
+    }
 }
 
 h5 {
