--- a/Forge.Web/Styles/_helpers.scss
+++ b/Forge.Web/Styles/_helpers.scss
@@ -14,10 +14,16 @@
     box-shadow: inset 0 0 2px rgba(black, 0.3);
 }
 
+.bold{
+    font-weight: bold;
+    padding: 3px 0;
+}
+
 .separator{
     display: block;
     height: 10px;
 
+    &.separator--tiny       { height: 10px; }
     &.separator--small      { height: 20px; }
     &.separator--medium     { height: 40px; }
     &.separator--large      { height: 80px; }
@@ -59,12 +65,24 @@
     h1{ text-shadow: 2px 2px rgba(black, 0.2); }
 }
 
+.no-results{
+    text-align: center;
+    opacity: 0.6;
+
+    &:after{
+        font-family: FontAwesome;
+        content: "";
+    }
+}
+
 .panel {
     background: $color-primary-10;
     padding: 10px;
-    margin: 10px 0;
+    margin: 20px 0;
     border: 1px solid $color-primary-60;
-    //@include soft-shadow();
+
+    @include soft-shadow();
+
     &.panel--centered{
         text-align: center;
     }
@@ -81,6 +99,7 @@
         margin-bottom: 20px;
         background: rgba(white, 0.7);
         padding: 10px;
+        font-size: 20px;
     }
 }
 
