--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -87,9 +87,15 @@ table {
   100% {
     background-position: 0% 51%; } }
 
+.bold {
+  font-weight: bold;
+  padding: 3px 0; }
+
 .separator {
   display: block;
   height: 10px; }
+  .separator.separator--tiny {
+    height: 10px; }
   .separator.separator--small {
     height: 20px; }
   .separator.separator--medium {
@@ -119,11 +125,21 @@ table {
   .section--summary h1 {
     text-shadow: 2px 2px rgba(0, 0, 0, 0.2); }
 
+.no-results {
+  text-align: center;
+  opacity: 0.6; }
+  .no-results:after {
+    font-family: FontAwesome;
+    content: ""; }
+
 .panel {
   background: whitesmoke;
   padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #c7c7c7; }
+  margin: 20px 0;
+  border: 1px solid #c7c7c7;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05); }
   .panel.panel--centered {
     text-align: center; }
   .panel.panel--clickable:hover {
@@ -133,7 +149,8 @@ table {
     margin: -10px;
     margin-bottom: 20px;
     background: rgba(255, 255, 255, 0.7);
-    padding: 10px; }
+    padding: 10px;
+    font-size: 20px; }
 
 *, *:before, *:after {
   -moz-box-sizing: inherit;
@@ -230,9 +247,9 @@ b {
   background-image: -ms-linear-gradient(top, #0e7aa4 0, #0f81ad 100%);
   background-image: linear-gradient(to bottombottom, #0e7aa4 0, #0f81ad 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e7aa4', endColorstr='#0f81ad',GradientType=0 );
-  -webkit-box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.2); }
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05); }
   #nav.sticky {
     background-color: #6f6f6f; }
   #nav > .container {
@@ -412,7 +429,7 @@ b {
 button,
 .button {
   display: inline-block;
-  padding: 5px 10px;
+  padding: 5px 0;
   cursor: pointer;
   background: #0d6d92;
   color: whitesmoke;
@@ -422,46 +439,59 @@ button,
   line-height: 14px;
   border-radius: 3px;
   font-family: inherit;
-  min-height: 30px; }
+  min-height: 30px;
+  min-width: 75px; }
   button:hover,
   .button:hover {
-    background-color: #1088b6; }
+    background: #1088b6; }
   button:active,
   .button:active {
-    background-color: #0d6d92; }
+    background: #0d6d92; }
   button + button,
   .button + button {
     margin-left: 5px; }
   button.button--primary,
   .button.button--primary {
-    background-color: #b1b1b1; }
+    background: #b1b1b1; }
     button.button--primary:hover,
     .button.button--primary:hover {
-      background-color: #909090; }
+      background: #909090; }
   button.button--tertiary,
   .button.button--tertiary {
-    background-color: #97be5a; }
+    background: #97be5a; }
     button.button--tertiary:hover,
     .button.button--tertiary:hover {
-      background-color: #7DAE31; }
+      background: #7DAE31; }
   button.button--action,
   .button.button--action {
-    background-color: #e5c066; }
+    background: #e5c066; }
     button.button--action:hover,
     .button.button--action:hover {
-      background-color: #e1b853; }
+      background: #e1b853; }
   button.button--transparent,
   .button.button--transparent {
     color: #6f6f6f;
-    background-color: transparent; }
+    background: none; }
     button.button--transparent:hover,
     .button.button--transparent:hover {
       color: #424242; }
+  button.button--link,
+  .button.button--link {
+    background: none;
+    color: #1088b6; }
+    button.button--link:visited, button.button--link:active, button.button--link:link,
+    .button.button--link:visited,
+    .button.button--link:active,
+    .button.button--link:link {
+      color: #1088b6; }
+    button.button--link:hover,
+    .button.button--link:hover {
+      color: #0e7aa4; }
   button:disabled, button[disabled],
   .button:disabled,
   .button[disabled] {
     cursor: default;
-    opacity: 0.25;
+    opacity: 0.5;
     pointer-events: none; }
 
 h1 {
@@ -476,7 +506,6 @@ h3 {
   background-color: whitesmoke; }
 
 h4 {
-  font-weight: bold;
   margin: 0 0 20px 0; }
   h4 + .summary {
     margin-top: -15px; }
@@ -549,15 +578,36 @@ h5 {
     margin: 0 5px;
     height: 40px; }
   .stage .designer__recent {
-    border-top: 1px solid #e0e0e0;
-    margin-top: 10px;
-    padding-top: 10px; }
-    .stage .designer__recent a {
-      display: block; }
+    text-align: left; }
+    .stage .designer__recent .recent__columns {
+      display: flex;
+      justify-content: center; }
+      .stage .designer__recent .recent__columns ul + ul {
+        margin-left: 50px; }
+      .stage .designer__recent .recent__columns button {
+        text-align: left; }
+      @media screen and (max-width: 600px) {
+        .stage .designer__recent .recent__columns {
+          flex-direction: column; }
+          .stage .designer__recent .recent__columns ul + ul {
+            margin: 30px 0 0 0; } }
+    .stage .designer__recent .recent__header {
+      font-size: 20px;
+      margin-bottom: 10px; }
+
+.designer__link {
+  display: block; }
+  .designer__link span:nth-child(2) {
+    font-size: 12px;
+    color: #6f6f6f;
+    margin-left: 10px; }
 
 .stage__workspace {
   padding: 20px;
-  min-height: calc(100% - 91px); }
+  min-height: calc(100% - 91px);
+  max-width: 900px; }
+  .stage__workspace > *:first-child {
+    margin-top: 0 !important; }
   .stage__workspace .group__definitions {
     display: flex;
     flex-wrap: wrap; }
@@ -571,6 +621,9 @@ h5 {
       padding-right: 30px; }
     .stage__workspace .definition__setting .field__label {
       min-width: 120px; }
+    .stage__workspace .definition__setting > .field .field__label,
+    .stage__workspace .definition__setting > .field .field__value {
+      padding-left: 30px; }
     .stage__workspace .definition__setting .definition__setting-remove {
       position: absolute;
       font-family: FontAwesome;
@@ -624,10 +677,13 @@ h5 {
 
 .stage__menu {
   background-color: #eeeeee;
-  border-bottom: 1px solid #c7c7c7; }
+  border-bottom: 1px solid #c7c7c7;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05); }
   .stage__menu .button {
     line-height: 1.2;
-    padding: 10px 15px; }
+    padding: 10px 20px; }
     .stage__menu .button:before {
       display: block;
       font-family: FontAwesome;
@@ -650,6 +706,10 @@ h5 {
   .designer__views h3 {
     padding: 0 0 10px 20px; }
 
+.designer__overlay {
+  display: none;
+  z-index: 9; }
+
 .designer__list {
   display: table-cell;
   vertical-align: top;
@@ -671,10 +731,15 @@ h5 {
   -moz-transition: transform 0.3s ease-in-out;
   -o-transition: transform 0.3s ease-in-out;
   -webkit-transition: opacity 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out; }
+  transition: transform 0.3s ease-in-out;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05); }
   @media screen and (max-width: 720px) {
     .designer__list {
-      position: absolute; } }
+      position: absolute; }
+      .designer__list ~ .designer__overlay {
+        display: block; } }
   .designer__list h3 {
     border-top-left-radius: 3px; }
   .designer__list.designer__list--empty {
@@ -688,6 +753,8 @@ h5 {
       -o-transform: translateX(-156px);
       -webkit-transform: translateX(-156px);
       transform: translateX(-156px); }
+      .designer__list.designer__list--closed ~ .designer__overlay {
+        display: none; }
       .designer__list.designer__list--closed .designer__mini-buttons {
         flex-direction: column;
         align-items: flex-end;
@@ -719,9 +786,9 @@ h5 {
       .designer__list .designer__list-actions .designer__mini-buttons button {
         flex-grow: 1;
         text-align: center;
+        min-width: 0;
         width: 44px;
         background: transparent;
-        transition: flex-grow 0.3s ease-in-out;
         border-bottom: 2px solid #c7c7c7;
         border-radius: 3px 3px 0 0;
         margin-bottom: -2px;
@@ -800,13 +867,16 @@ h5 {
       width: 100%;
       text-align: left;
       height: 40px;
+      padding: 10px;
       border-radius: 0;
       border: none;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis; }
-    .designer__list .designer__list-item .setting--active {
-      opacity: 0.6; }
+    .designer__list .designer__list-item.setting--active .setting__icon:after {
+      font-family: FontAwesome;
+      content: "\f058";
+      margin-right: 5px; }
     .designer__list .designer__list-item.designer__list-item--unsaved {
       border-color: #e5c066 !important; }
       .designer__list .designer__list-item.designer__list-item--unsaved button {
@@ -825,7 +895,7 @@ h5 {
             }*/ }
       .designer__list .designer__list-item.designer__list-item--selected .button {
         color: white !important; }
-    .designer__list .designer__list-item:first-child {
+    .designer__list .designer__list-item:first-child:not(.setting) {
       border: none; }
 
 .designer__list-header {
@@ -838,10 +908,28 @@ h5 {
   margin-bottom: 10px; }
 
 .designer__tiles {
-  display: flex; }
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
   .designer__tiles .designer__tile {
-    height: 100px;
-    width: 100px; }
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    line-height: 1;
+    width: 150px; }
+    .designer__tiles .designer__tile.designer__tile--access .designer__tile-title:after {
+      font-family: FontAwesome;
+      content: "\f13e"; }
+    .designer__tiles .designer__tile.designer__tile--Locked .designer__tile-title:after {
+      content: "\f023"; }
+    .designer__tiles .designer__tile .designer__tile-title {
+      padding: 0;
+      padding-bottom: 10px;
+      font-size: 42px;
+      text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+      font-weight: bold; }
+    .designer__tiles .designer__tile + .designer__tile {
+      margin-left: 10px; }
 
 .definition__tags .field__label {
   vertical-align: top !important;
@@ -891,16 +979,15 @@ h5 {
   .field .field__label {
     display: block;
     margin: 3px 0;
-    font-weight: 600;
+    font-weight: bold;
     vertical-align: middle;
     word-break: break-word;
     font-size: 14px; }
   .field .field__value {
     display: inline-block;
     width: 100%;
-    vertical-align: middle; }
-  .field span.field__value {
-    padding-left: 5px; }
+    vertical-align: middle;
+    min-height: 30px; }
   .field input, .field select {
     width: 100%;
     max-width: 320px; }
@@ -931,14 +1018,12 @@ input {
     display: table;
     width: 100%; }
     .field .field__label {
-      padding: 10px;
       min-width: 100px; }
-    .field .field__value {
-      padding-left: 10px; }
     .field .field__label,
     .field .field__value {
       display: table-cell;
-      margin: 0; }
+      margin: 0;
+      padding: 5px 0; }
   .field-group {
     display: table;
     width: 100%; }
@@ -949,7 +1034,10 @@ input {
   display: table;
   width: 100%;
   background: #eeeeee;
-  border: 1px solid #c7c7c7; }
+  border: 1px solid #c7c7c7;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05); }
   .banner .banner__content {
     display: table-cell;
     padding: 10px;
@@ -1010,7 +1098,7 @@ input {
   width: 100%; }
 
 .expandable .expandable__label {
-  padding-left: 20px; }
+  padding-left: 30px; }
 
 .expandable .expandable__button,
 .expandable .expandable__label {
@@ -1018,7 +1106,9 @@ input {
   vertical-align: middle; }
   .expandable .expandable__button .expandable__icon,
   .expandable .expandable__label .expandable__icon {
-    font-family: FontAwesome; }
+    font-family: FontAwesome;
+    min-width: 0;
+    padding: 10px; }
     .expandable .expandable__button .expandable__icon:after,
     .expandable .expandable__label .expandable__icon:after {
       display: inline-block;
@@ -1042,7 +1132,7 @@ input {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4); }
+  background: rgba(0, 0, 0, 0.1); }
 
 .dialog {
   position: fixed;
@@ -1060,11 +1150,12 @@ input {
     top: 100px;
     left: 50%;
     transform: translateX(-50%);
-    border: 1px solid white;
     background: whitesmoke;
-    -webkit-box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 1px 1px 7px 0 rgba(0, 0, 0, 0.2); }
+    border: 1px solid #c7c7c7;
+    z-index: 100;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05); }
   .dialog .dialog__header,
   .dialog .dialog__content,
   .dialog .dialog__buttons {
@@ -1135,18 +1226,20 @@ input {
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis; }
-  .dictionary .dictionary__list li {
-    display: flex;
-    margin-bottom: 10px;
-    align-items: center; }
-    .dictionary .dictionary__list li .dictionary__key {
-      width: 20%; }
-    .dictionary .dictionary__list li .dictionary__value {
-      max-width: 100%;
-      width: 70%;
-      margin: 0 10px; }
-    .dictionary .dictionary__list li .dictionary__remove {
-      width: 10%; }
+  .dictionary .dictionary__list {
+    min-width: 400px; }
+    .dictionary .dictionary__list li {
+      display: flex;
+      margin-bottom: 10px;
+      align-items: center; }
+      .dictionary .dictionary__list li .dictionary__key {
+        width: 20%; }
+      .dictionary .dictionary__list li .dictionary__value {
+        max-width: 100%;
+        width: 70%;
+        margin: 0 10px; }
+      .dictionary .dictionary__list li .dictionary__remove {
+        width: 10%; }
   .dictionary .dictionary__add {
     display: flex;
     align-items: center;
