--- a/Forge.Web/Styles/Components/_dialogs.scss
+++ b/Forge.Web/Styles/Components/_dialogs.scss
@@ -19,6 +19,7 @@
         top: 100px;
         left: 50%;
         transform: translateX(-50%);
+        min-width: 400px;
         background: $color-primary-10;
         border:1px solid $color-primary-60;
         z-index: 100;
