--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -98,4 +98,4 @@ b { font-weight: 600; }
 @import 'Components/tooltips';
 
 // Controls
-@import 'Components/pushList';
+@import 'Components/dictionary';
