--- a/Forge.Web/Styles/Components/_dictionary.scss
+++ b/Forge.Web/Styles/Components/_dictionary.scss
@@ -4,7 +4,7 @@
     display: table;
     width: 100%;
 
-    .dictionary__tooltip {
+    .tooltip {
         .input {
             display: inline-block;
             width: 100%;
